# cpp-schmitt-trigger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  schmitt_trigger.hpp
schmitt/: trigger.hpp
tests/: CMakeLists.txt  schmitt_trigger.cpp  schmitt_trigger_inverting.cpp
